src/components/proposals/brand/navbar/navbar.scss
@import "../../../../assets/scss/variables";
@import "../../../../assets/scss/utilities";

.iowa-bar--narrow .logo--tab {
  margin-right: 0px;
}

.top-nav {
  display: flex;
  flex: 1;
  flex-direction: column;
  justify-content: space-between;
}

.dropdown {
  float: left;
  position: relative;
}

.dropdown-content {
  display: none;
  position: relative;

  a {
    display: block;
  }

  .open a {
    display: block;
  }
}

.brand-site-name-toggle {
  display: flex;
  justify-content: space-between;
  flex: 1;
  background-color: $secondary;

  .site-name {
    font-weight: 800;
    font-size: 1.6rem;
    color: white;
    padding-left: 0px;
    background-color: $secondary;
  }

  .brand-site-name {
    display: flex;
    background-color: $secondary;
  }

  .toggle {
    padding: 10px 10px 3px 3px;
    background-color: $secondary;
    a {
      display: flex;
      justify-content: center;
      align-items: center;
      margin: 0 auto;
      height: 100%;
      color: $white;
      text-align: center;
      text-decoration: none;
      font-size: 17px;
      width: 50px;
      height: 50px;
    }
    a:hover {
      background-color: $white;
      color: $secondary;
    }
  }
}

.right-links {
  position: relative;

  a {
    float: none;
    display: none;
  }

  .dropdown {
    float: none;
    display: none;
  }
}

.open {
  position: relative;
  display: block;
  width: 100%;
  border-top: none;
  z-index: 1;
  box-shadow: none;
  -webkit-box-shadow: none;


}

a.skip-main {
  left: -999px;
  position: absolute;
  top: auto;
  width: 1px;
  height: 1px;
  overflow: hidden;
  z-index: -999;
}
a.skip-main:focus,
a.skip-main:active {
  color: $white;
  background-color: $secondary;
  left: auto;
  top: 60px;
  width: 100%;
  height: 35px;
  overflow: auto;
  margin: auto;
  line-height: 35px;
  // border:4px solid $primary;
  text-align: center;
  font-size: 1.2em;
  z-index: 999;
}

.site-name {
  color: $secondary;
  padding-left: 0px;

  span {
    height: 100%;
    padding-left: 15px;
    border-left: 1px solid;
    border-left-color: $white;
  }

  a {
    color: $secondary;
  }
}

// @include breakpoint(menu) {
  @media screen and (min-width: 855px) {
  .top-nav {
    display: flex;
    flex: 1;
    flex-direction: row;
    justify-content: space-between;
  }

  .brand-site-name-toggle {
    display: flex;
    justify-content: space-between;
    flex: 1;
    background-color: $primary;

    .site-name {
      font-size: 1.4rem;
      color: $secondary;
      padding-left: 0px;
      background-color: $primary;

      span {
        border: none;
      }
    }

    .brand-site-name {
      display: flex;
    }

    .toggle {
      padding: 3px;
      background-color: $primary;
      display: none;
    }
  }

  .right-links {
    position: relative;
    display: block;
    padding: 6px 3px 0px 3px;
    a {
      margin: 0px 5px 0px 5px;
      padding: 0px 10px 0px 10px;
      display: flex;
      float: left;
      justify-content: center;
      align-items: center;
      margin: 0 auto;
      height: 100%;
      color: $secondary;
      text-align: center;
      text-decoration: none;
      font-size: 17px;
      height: 50px;
      min-width: 90px;
      border-bottom: 3px solid;
      border-bottom-color: $primary;
    }

    a >span:last-child{
      margin-left:5px;
    }

    a>span:first-child{
      margin-right:5px;
    }

    a:hover {
      background-color: $white;
      color: $secondary;
      border-bottom: 3px solid;
      border-bottom-color: $secondary;
    }
  }

  .right-links .dropdown {
    float: left;
    display: block;
  }
  .dropdown-content a {
    width: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
    margin: 0 auto;
    height: 100%;
    color: $secondary;
    text-align: center;
    text-decoration: none;
    font-size: 17px;
    min-width: 90px;
    height: 50px;
  }

  .dropdown {
    background-color: $primary;
    float: left;
    position: relative;
    border: none;
  }

  .dropdown .open {
    background-color: $primary;
  }





  .open {
    background-color: $primary;
    border-top-color: $secondary;
    border-top: 3px solid;
    position: absolute;
    display: block;
    z-index: 1000;
    top: 47px;
    box-shadow: 0 5px 10px -2px rgba(0, 0, 0, 0.26);
    -webkit-box-shadow: 0 5px 10px -2px rgba(0, 0, 0, 0.26);
  }
}

@media screen and (max-width: 855px) {


  .right-links.right-links.responsive{
    padding:10px;
    background-color:  #343a40;
  }

  .right-links.responsive a,

  .right-links.responsive .dropdown {
    float: none;
    display: block;

  }

  .right-links.responsive {
    position: absolute;
    top: 70px;
    width: 100%;
    box-shadow: 0 5px 10px -2px rgba(0, 0, 0, 0.26);
    -webkit-box-shadow: 0 5px 10px -2px rgba(0, 0, 0, 0.26);
  }

  .right-links.responsive a {
    color: $white;
    text-decoration: none;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    padding: 0 10px;
    align-items: center;
   // margin: 0 auto;
    text-align: center;
    height: 50px;
    width:100%;

    background-color: #212529;
    border-bottom: 1px solid rgba(0,0,0,0.2);
    border-top: 1px solid rgba(255,255,255,0.05);
  }

  .right-links a:hover {
    background-color: $white;
    color: $secondary;
    span {
      border-bottom-color: $secondary;
    }
  }
}

#main {
  margin-top: 25px;
}

@include breakpoint(menu) {
  #main {
    margin-top: 85px;
  }
}

